--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,19 +7,25 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "axios": "^1.6.1",
     "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.2.0",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuetify": "^3.0.0-beta.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "webpack-dev-server": "^4.15.1"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
