--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.1",
     "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
+    "firebase": "^10.6.0",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
